--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,8 +12,15 @@
 			<label for="password">Password</label>
 			<input type="password" id="password" name="password" required />
 		</div>
+		<div class="form-group">
+			<label for="rememberMe">Remember me</label>
+			<input type="checkbox" id="rememberMe" name="rememberMe" />
+		</div>
 		<div class="form-submit">
 			<input type="submit" value="Log in" />
+			{{#if error}}
+			<div style="color:red;">{{error}}</div>
+			{{/if}}
 			<div class="margin-top-30">
 				or <a href="/users/create">Create an account</a>
 			</div>
